--- a/menu.html
+++ b/menu.html
@@ -44,7 +44,12 @@
 				¡Visítenos!
 			</button>
 		</a>
-
+		<p>
+		<a href="registro.html" target="content" >
+			<button class="button">
+				¡Registra una guitarra!
+			</button>
+		</a>
 
 
 		</p>
